# justrunjs

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DESIGN.md  HANDOVER.md  README.md  STYLE_GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json
.github/workflows/: deploy-marketing.yml  release.yml
capabilities/: default.json
icons/: icon.icns
marketing/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  wrangler.toml
marketing/public/: _headers
marketing/scripts/: generate-assets.mjs
marketing/src/components/: Button.astro  EditorEmbed.astro  ThemeToggle.astro
marketing/src/layouts/: Layout.astro
marketing/src/lib/: theme-plugins.ts
marketing/src/pages/: app.astro  index.astro
marketing/src/pages/web/: index.astro
marketing/src/styles/: global.css
marketing/src/web/: babel-standalone.d.ts  inspector.js  inspector.ts  main.js  main.ts  style.css  theme-boot.js  theme-boot.ts  theme-plugins.js  ts-env.js  ts-env.ts  worker.js  worker.ts
src/: inspector.js  instrument.rs  lib.rs  loader.rs  runtime.rs  worker.rs
ui/: index.html  main.js  style.css
